# discipline

./: README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/Pomo/: Pomo.css  Pomo.tsx
src/components/ToDoList/: ToDo.tsx
